--- a/prepros.config
+++ b/prepros.config
@@ -14,7 +14,7 @@
       "afterUpload": false
     },
     "sync": {
-      "enable": false,
+      "enable": true,
       "mouse": true,
       "keyboard": true,
       "form": true,
@@ -414,6 +414,18 @@
         "sortAttrs": true,
         "removeDimensions": true
       },
+      "tailwindcss": {
+        "rootDir": "",
+        "content": [
+          "**/*.html",
+          "**/*.php",
+          "**/*.js",
+          "!wp-admin",
+          "!wp-includes",
+          "!node_modules",
+          "!Prepros Export"
+        ]
+      },
       "turf": {
         "rootDir": ""
       },
@@ -576,6 +588,10 @@
           {
             "task": "copy",
             "enable": true
+          },
+          {
+            "task": "tailwindcss",
+            "enable": false
           },
           {
             "task": "postcss-import",
